--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -234,7 +234,7 @@
         "ip_noise_gamma_enabled = False #@param {type:\"boolean\"}\n",
         "ip_noise_gamma = 0.05 #@param {type:\"slider\", min:0.05, max:0.1, step:0.01}\n",
         "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros) no es necesario activarlo si entrenas Lora Vpred.\n",
-        "multinoise = True #@param {type:\"boolean\"}\n",
+        "multinoise = False #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown ### ▶️ Structure\n",
         "#@markdown LoRA es del tipo clásico y bueno para una variedad de propósitos. LoCon es bueno con los estilos artísticos ya que tiene más capas para aprender más aspectos del conjunto de datos.\n",
@@ -375,9 +375,10 @@
         "  !git clone https://github.com/derrian-distro/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
         "  !chmod 755 /content/trainer/colab_install.sh > /dev/null 2> errores.log\n",
         "\n",
+        "  print('\\033[93mInstalando dependencias, esto puede tardar hasta ¡¡6 minutos!!\\033[0m')\n",
         "  os.chdir(trainer_dir)\n",
         "  !./colab_install.sh > /dev/null 2> errores.log\n",
-        "  print('\\033[91mInstalando dependencias, esto puede tardar hasta ¡¡6 minutos!!\\033[0m')\n",
+        "\n",
         "\n",
         "  # fix logging\n",
         "  !{venv_pip} uninstall -y rich\n",
@@ -444,7 +445,7 @@
         "      return\n",
         "  for folder, (img, rep) in images_repeats.items():\n",
         "    if not img:\n",
-        "      print(f\"💥 Error: Your {folder.replace('/content/drive/', '')} folder is empty.\")\n",
+        "      print(f\"💥 Error: tú {folder.replace('/content/drive/', '')} La carpeta está vacía.\")\n",
         "      return\n",
         "  test_files = []\n",
         "  for f in files:\n",
@@ -461,7 +462,7 @@
         "  if caption_extension and not [txt for txt in files if txt.lower().endswith(caption_extension)]:\n",
         "    caption_extension = \"\"\n",
         "  if continue_from_lora and not (continue_from_lora.endswith(\".safetensors\") and os.path.exists(continue_from_lora)):\n",
-        "    print(f\"💥 Error: Invalid path to existing Lora. Example: /content/drive/MyDrive/Loras/example.safetensors\")\n",
+        "    print(f\"💥 Error: ruta no válida del Lora existente. Ejemplo: /content/drive/MyDrive/Loras/example.safetensors\")\n",
         "    return\n",
         "\n",
         "  # Show estimations to the user\n",
@@ -474,10 +475,10 @@
         "\n",
         "  for folder, (img, rep) in images_repeats.items():\n",
         "    print(\"📁\"+folder.replace(\"/content/drive/\", \"\") + (\" (Regularization)\" if folder in reg else \"\"))\n",
-        "    print(f\"📈 Found {img} images with {rep} repeats, equaling {img*rep} steps.\")\n",
-        "  print(f\"📉 Divide {pre_steps_per_epoch} steps by {train_batch_size} batch size to get {steps_per_epoch} steps per epoch.\")\n",
+        "    print(f\"📈 Se encontró {img} imágenes con {rep} repeticiones, igual {img*rep} pasos.\")\n",
+        "  print(f\"📉 Divide {pre_steps_per_epoch} pasos por {train_batch_size} batch size para obtener {steps_per_epoch} pasos por epoch.\")\n",
         "  if max_train_epochs:\n",
-        "    print(f\"🔮 Habrá {max_train_epochs} epochs, por alrededor de {total_steps} Total de pasos de entrenamiento.\")\n",
+        "    print(f\"🔮 Habrá {max_train_epochs} epochs, por alrededor de {total_steps} total de pasos.\")\n",
         "  else:\n",
         "    print(f\"🔮 Habrá {total_steps} pasos, divididos en {estimated_epochs} epochs y algo más.\")\n",
         "\n",
@@ -609,7 +610,7 @@
         "\n",
         "    with open(dataset_config_file, \"w\") as f:\n",
         "      f.write(toml.dumps(dataset_config_dict))\n",
-        "    print(f\"📄 Dataset config saved to {dataset_config_file}\")\n",
+        "    print(f\"📄 Configuración de dataset guardada en {dataset_config_file}\")\n",
         "\n",
         "def download_model():\n",
         "  global old_model_url, model_url, model_file, vae_url, vae_file\n",
@@ -897,7 +898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "W84Jxf-U2TIU"
       },
