Add animagine 4.0 zero and Illustrious 1.0

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -70,7 +70,7 @@
         "#@markdown ### 💤 Auto Off\n",
         "\n",
         "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
-        "auto_off   = True  # @param {type: \"boolean\"}\n",
+        "auto_off   = False  # @param {type: \"boolean\"}\n",
         "if auto_off:\n",
         "    print(\"\\033[96mAuto Off encendido\\033[0m\")\n",
         "if not auto_off:\n",
@@ -116,7 +116,7 @@
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
-        "training_model = \"Illustrious\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"Illustrious\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAI-XL-Vpred-v0.75\",\"noobai-xl-vpred-v0.5\"]\n",
+        "training_model = \"Illustrious_0.1\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\", \"animagine_4.0_zero\", \"Illustrious_0.1\", \"Illustrious_1.0\", \"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAI-XL-Vpred-v0.75\",\"noobai-xl-vpred-v0.5\"]\n",
         "optional_custom_training_model = \"\" #@param {type:\"string\"}\n",
         "#@markdown Marca esta opción si deseas entrenar con un modelo en formarto diffusers o el modelo custom esta en dicho formato\n",
         "custom_model_is_diffusers = False #@param {type:\"boolean\"}\n",
@@ -142,11 +142,23 @@
         "  else:\n",
         "    model_url = \"https://civitai.com/api/download/models/293564\"\n",
         "  model_file = \"/content/animagineXLV3.safetensors\"\n",
-        "elif \"Illustrious\" in training_model:\n",
+        "elif \"animagine_4.0_zero\" in training_model:\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/cagliostrolab/animagine-xl-4.0-zero\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/cagliostrolab/animagine-xl-4.0-zero/resolve/main/animagine-xl-4.0-zero.safetensors\"\n",
+        "  model_file = \"/content/animagine-xl-4.0-zero.safetensors\"\n",
+        "elif \"Illustrious_0.1\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/OnomaAIResearch/Illustrious-xl-early-release-v0\"\n",
         "  else:\n",
         "    model_url = \"https://huggingface.co/OnomaAIResearch/Illustrious-xl-early-release-v0/resolve/main/Illustrious-XL-v0.1.safetensors\"\n",
+        "elif \"Illustrious_1.0\" in training_model:\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious-xl-v1.0\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious-xl-v1.0/resolve/main/Illustrious-XL-v1.0.safetensors\"\n",
+        "  model_file = \"/content/Illustrious-XL-v1.0.safetensors\"\n",
         "elif \"NoobAI-XL0.75\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.75\"\n",
@@ -269,8 +281,8 @@
         "train_batch_size = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "#@markdown xformers funciona mejor que sdpa con los nuevos scrips.\n",
         "cross_attention = \"xformers\" #@param [\"sdpa\", \"xformers\"]\n",
-        "#@markdown Utilice `full fp16` para el uso mínimo de memoria. Es posible que las opciones `bf16` no funcionen correctamente en el nivel de GPU gratuito.<p>\n",
-        "#@markdown Todas las demás opciones solo funcionarán con Colab Pro. <p>\n",
+        "#@markdown Utilice `full fp16` para el uso mínimo de memoria. <p>\n",
+        "#@markdown `float, full bf16, full fp16, mixed bf16 y mixed fp16` solo funcionaran con colab pro. <p>\n",
         "#@markdown El Lora se entrenará con la precisión seleccionada, pero siempre se guardará en formato fp16 por razones de compatibilidad.\n",
         "precision = \"full fp16\" #@param [\"float\", \"full fp16\", \"full bf16\", \"mixed fp16\", \"mixed bf16\"]\n",
         "#@markdown El almacenamiento en caché latente en drive agregará un archivo de 250 KB junto a cada imagen, pero usará considerablemente menos memoria.\n",
@@ -762,7 +774,7 @@
         "    return\n",
         "\n",
         "  if not dependencies_installed:\n",
-        "    print(\"\\n🏭 Instalación del entrenador...\\n\")\n",
+        "    print(\"\\n🏭 Instalando del entrenador...\\n\")\n",
         "    t0 = time.time()\n",
         "    install_trainer()\n",
         "    t1 = time.time()\n",
@@ -898,7 +910,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "W84Jxf-U2TIU"
       },
