--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -70,7 +70,7 @@
         "#@markdown ### 💤 Auto Off\n",
         "\n",
         "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
-        "auto_off   = False  # @param {type: \"boolean\"}\n",
+        "auto_off   = True  # @param {type: \"boolean\"}\n",
         "if auto_off:\n",
         "    print(\"\\033[96mAuto Off encendido\\033[0m\")\n",
         "if not auto_off:\n",
@@ -774,7 +774,7 @@
         "    return\n",
         "\n",
         "  if not dependencies_installed:\n",
-        "    print(\"\\n🏭 Instalando del entrenador...\\n\")\n",
+        "    print(\"\\n🏭 Instalando entrenador...\\n\")\n",
         "    t0 = time.time()\n",
         "    install_trainer()\n",
         "    t1 = time.time()\n",
