add recommended configuration

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -307,6 +307,7 @@
         "#@markdown Argumentos recomendado para CAME: `weight_decay=0.04` <p>\n",
         "#@markdown Si se selecciona Dadapt o Prodigy y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
         "#@markdown `unet_lr=0.75`, `text_encoder_lr=0.75`, `network_alpha=network_dim`, `full_precision=True`<p>\n",
+        "#@markdown Si selecciona Prodigy o Dadapt recomiendo usar `mixed fp16`para mejores resultados. <p>\n",
         "recommended_values = True #@param {type:\"boolean\"}\n",
         "#@markdown Alternativamente, establezca sus propios argumentos de optimizador separados por espacios (no comas). `recommended_values` debe estar deshabilitado.\n",
         "optimizer_args = \"\" #@param {type:\"string\"}\n",
@@ -864,7 +865,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown Conectarse a Google Drive 📁. Algunas de las opciones de abajo necesitan conexión a Google Drive,\n",
+        "#@markdown Conectarse a Google Drive 📁 <p> Algunas de las opciones de abajo necesitan conexión a Google Drive,\n",
         "#@markdown conectate aquí.\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
