--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -736,7 +736,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown Conectarse a Google Drive 📁. Algunas de las opciones de abajo necesitan conexión a Google Drive,\n",
+        "#@markdown ##Conectarse a Google Drive 📁 <p> Algunas de las opciones de abajo necesitan conexión a Google Drive\n",
         "#@markdown conectate aquí.\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
@@ -790,6 +790,15 @@
       "source": [
         "custom_dataset = None"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Extras"
+      ],
+      "metadata": {
+        "id": "y5gg2m3B-daX"
+      }
     },
     {
       "cell_type": "code",
@@ -861,11 +870,48 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
+        "id": "1RfwB4UB3M_w"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown ### 📂 Descomprimir conjunto de datos\n",
+        "#@markdown Es mucho más lento cargar archivos individuales en drive, por lo que es posible que desee cargar un archivo zip si tiene su conjunto de datos en su computadra, aqui puedes descomprimirlo.\n",
+        "zip = \"/content/drive/MyDrive/my_dataset.zip\" #@param {type:\"string\"}\n",
+        "extract_to = \"/content/drive/MyDrive/Loras/example/dataset\" #@param {type:\"string\"}\n",
+        "\n",
+        "import os, zipfile\n",
+        "\n",
+        "if not os.path.exists('/content/drive'):\n",
+        "  from google.colab import drive\n",
+        "  print(\"📂 Connecting to Google Drive...\")\n",
+        "  drive.mount('/content/drive')\n",
+        "\n",
+        "os.makedirs(extract_to, exist_ok=True)\n",
+        "\n",
+        "with zipfile.ZipFile(zip, 'r') as f:\n",
+        "  f.extractall(extract_to)\n",
+        "\n",
+        "print(\"✅ Done\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Iniciar sesión y crear repositorio en huggingFace 🤗"
+      ],
+      "metadata": {
+        "id": "R3lcQFnR7bwa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
         "id": "8YlP0cNQyujy"
       },
       "outputs": [],
       "source": [
-        "#@markdown ## HuggingFace 🤗\n",
         "from huggingface_hub import login\n",
         "from huggingface_hub import HfApi\n",
         "from huggingface_hub.utils import validate_repo_id, HfHubHTTPError\n",
@@ -921,6 +967,15 @@
         "if dataset_name:\n",
         "    create_repo(api, user, orgs_name, dataset_name, \"dataset\", make_private)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Subir a huggingface_hub (Lora y dataset) 🤗"
+      ],
+      "metadata": {
+        "id": "OFFNDwd87L_4"
+      }
     },
     {
       "cell_type": "code",
@@ -1009,41 +1064,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "1RfwB4UB3M_w"
-      },
-      "outputs": [],
-      "source": [
-        "#@markdown ### 📂 Descomprimir conjunto de datos\n",
-        "#@markdown Es mucho más lento cargar archivos individuales en drive, por lo que es posible que desee cargar un archivo zip si tiene su conjunto de datos en su computadra, aqui puedes descomprimirlo.\n",
-        "zip = \"/content/drive/MyDrive/my_dataset.zip\" #@param {type:\"string\"}\n",
-        "extract_to = \"/content/drive/MyDrive/Loras/example/dataset\" #@param {type:\"string\"}\n",
-        "\n",
-        "import os, zipfile\n",
-        "\n",
-        "if not os.path.exists('/content/drive'):\n",
-        "  from google.colab import drive\n",
-        "  print(\"📂 Connecting to Google Drive...\")\n",
-        "  drive.mount('/content/drive')\n",
-        "\n",
-        "os.makedirs(extract_to, exist_ok=True)\n",
-        "\n",
-        "with zipfile.ZipFile(zip, 'r') as f:\n",
-        "  f.extractall(extract_to)\n",
-        "\n",
-        "print(\"✅ Done\")"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "i7CL4Ckp3SeI"
       },
       "source": [
-        "# 📈 Plot training results\n",
+        "# 📈 Gráficas del entrenamiento\n",
         "Puedes hacer esto después de ejecutar el entrenador.  No necesitas esto a menos que sepas lo que estás haciendo.  \n",
         " Es posible que la primera celda a continuación no cargue todos sus registros.  Continúe probando la segunda celda hasta que se hayan cargado todos los datos."
       ]
