remove unneeded code that is not used

--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -51,112 +51,32 @@
         "# @title ## **1. Install dependencies** ✅\n",
         "import os\n",
         "import shutil\n",
-        "import time\n",
-        "import requests\n",
-        "import torch\n",
         "from subprocess import getoutput\n",
-        "from IPython.utils import capture\n",
         "from google.colab import drive\n",
         "from IPython.display import clear_output\n",
         "\n",
         "%store -r\n",
         "\n",
         "# root_dir\n",
-        "root_dir          = \"/content\"\n",
-        "drive_dir         = os.path.join(root_dir, \"drive/MyDrive\")\n",
-        "deps_dir          = os.path.join(root_dir, \"deps\")\n",
-        "repo_dir          = os.path.join(root_dir, \"kohya-trainer\")\n",
-        "training_dir      = os.path.join(root_dir, \"LoRA\")\n",
-        "pretrained_model  = os.path.join(root_dir, \"pretrained_model\")\n",
-        "vae_dir           = os.path.join(root_dir, \"vae\")\n",
-        "lora_dir          = os.path.join(root_dir, \"network_weight\")\n",
-        "repositories_dir  = os.path.join(root_dir, \"repositories\")\n",
-        "config_dir        = os.path.join(training_dir, \"config\")\n",
-        "tools_dir         = os.path.join(repo_dir, \"tools\")\n",
-        "finetune_dir      = os.path.join(repo_dir, \"finetune\")\n",
-        "accelerate_config = os.path.join(repo_dir, \"accelerate_config/config.yaml\")\n",
         "\n",
-        "for store in [\"root_dir\", \"repo_dir\", \"training_dir\", \"repositories_dir\", \"accelerate_config\", \"tools_dir\", \"finetune_dir\", \"config_dir\"]:\n",
-        "    with capture.capture_output() as cap:\n",
-        "        %store {store}\n",
-        "        del cap\n",
-        "\n",
-        "repo_dict = {\n",
-        "    \"qaneel/kohya-trainer (forked repo, stable, optimized for colab use)\" : \"https://github.com/qaneel/kohya-trainer\",\n",
-        "    \"kohya-ss/sd-scripts (original repo, latest update)\"                    : \"https://github.com/kohya-ss/sd-scripts\",\n",
-        "}\n",
-        "\n",
-        "repository        = \"qaneel/kohya-trainer (forked repo, stable, optimized for colab use)\" #param [\"qaneel/kohya-trainer (forked repo, stable, optimized for colab use)\", \"kohya-ss/sd-scripts (original repo, latest update)\"] {allow-input: true}\n",
-        "repo_url          = repo_dict[repository]\n",
-        "branch            = \"main\"  #param {type: \"string\"}\n",
-        "output_to_drive   = True  # @param {type: \"boolean\"}\n",
-        "\n",
-        "def clone_repo(url, dir, branch):\n",
-        "    if not os.path.exists(dir):\n",
-        "       !git clone -b {branch} {url} {dir}\n",
-        "\n",
-        "def mount_drive(dir):\n",
-        "    output_dir      = os.path.join(training_dir, \"output\")\n",
-        "\n",
-        "    if output_to_drive:\n",
-        "        if not os.path.exists(drive_dir):\n",
-        "            drive.mount(os.path.dirname(drive_dir))\n",
-        "        output_dir  = os.path.join(drive_dir, \"kohya-trainer/output\")\n",
-        "\n",
-        "    return output_dir\n",
-        "\n",
-        "def setup_directories():\n",
-        "    global output_dir\n",
-        "\n",
-        "    output_dir      = mount_drive(drive_dir)\n",
-        "\n",
-        "    for dir in [training_dir, config_dir, pretrained_model, vae_dir, repositories_dir, output_dir]:\n",
-        "        os.makedirs(dir, exist_ok=True)\n",
-        "\n",
-        "def pastebin_reader(id):\n",
-        "    if \"pastebin.com\" in id:\n",
-        "        url = id\n",
-        "        if 'raw' not in url:\n",
-        "                url = url.replace('pastebin.com', 'pastebin.com/raw')\n",
-        "    else:\n",
-        "        url = \"https://pastebin.com/raw/\" + id\n",
-        "    response = requests.get(url)\n",
-        "    response.raise_for_status()\n",
-        "    lines = response.text.split('\\n')\n",
-        "    return lines\n",
-        "\n",
-        "def install_dependencies():\n",
-        "    gpu_info          = getoutput('nvidia-smi')\n",
+        "output_to_drive   = True  # param {type: \"boolean\"}\n",
+        "if output_to_drive:\n",
+        "  from google.colab import drive\n",
+        "  drive.mount('/content/drive')\n",
         "\n",
         "\n",
         "#install dependencies\n",
         "    # Custom =====================\n",
-        "    !git clone https://github.com/corkborg/wd14-tagger-standalone /content/wd14_tagger\n",
-        "    !pip -q install prodigyopt==1.0 flax==0.8.4 jax==0.4.23 jaxlib==0.4.23 opencv-python-headless==4.9.0.80\n",
-        "    !pip install onnxruntime==1.17.3\n",
+        "!git clone https://github.com/corkborg/wd14-tagger-standalone /content/wd14_tagger\n",
+        "!pip -q install prodigyopt==1.0 flax==0.8.4 jax==0.4.23 jaxlib==0.4.23 opencv-python-headless==4.9.0.80 -q\n",
+        "!pip install onnxruntime==1.17.3 -q\n",
         "    # ============================\n",
-        "    clear_output()\n",
+        "clear_output()\n",
         "\n",
-        "    from accelerate.utils import write_basic_config\n",
+        "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
+        "os.environ[\"SAFETENSORS_FAST_GPU\"] = \"1\"\n",
+        "os.environ[\"PYTHONWARNINGS\"] = \"ignore\"\n",
         "\n",
-        "    if not os.path.exists(accelerate_config):\n",
-        "        write_basic_config(save_location=accelerate_config)\n",
-        "\n",
-        "def prepare_environment():\n",
-        "    os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
-        "    os.environ[\"SAFETENSORS_FAST_GPU\"] = \"1\"\n",
-        "    os.environ[\"PYTHONWARNINGS\"] = \"ignore\"\n",
-        "\n",
-        "\n",
-        "def main():\n",
-        "    os.chdir(root_dir)\n",
-        "    clone_repo(repo_url, repo_dir, branch)\n",
-        "    os.chdir(repo_dir)\n",
-        "    setup_directories()\n",
-        "    install_dependencies()\n",
-        "    prepare_environment()\n",
-        "\n",
-        "main()\n",
         "(print(f\"DONE ✅\"))"
       ]
     },
@@ -357,6 +277,7 @@
         "\n",
         "os.chdir(tag_dir)\n",
         "!{final_args}\n",
+        "clear_output()\n",
         "print(\"\\033[96mDONE ✅\\033[0m\")"
       ],
       "metadata": {
