Fix data cleaning

--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -122,7 +122,7 @@
         "\n",
         "%store -r\n",
         "\n",
-        "os.chdir(root_dir)\n",
+        "os.chdir(train_data_dir)\n",
         "\n",
         "test = os.listdir(train_data_dir)\n",
         "# @markdown This section will delete unnecessary files and unsupported media such as `.mp4`, `.webm`, and `.gif`. These files are not used and may cause errors when training your lora.\n",
