Fix Custom Caption/Tag

--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -295,7 +295,7 @@
         "\n",
         "%store -r\n",
         "\n",
-        "os.chdir(root_dir)\n",
+        "os.chdir(train_data_dir)\n",
         "\n",
         "# @markdown Add or remove custom tags here.\n",
         "extension   = \".txt\"  # @param [\".txt\", \".caption\"]\n",
