z3d and ml models added

--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -220,7 +220,7 @@
       "source": [
         "from IPython.display import clear_output\n",
         "#@markdown ### **4. Tag your images**\n",
-        "#@markdown ##### **Waifu Diffusion 1.4 Tagger V3**\n",
+        "#@markdown ##### **Waifu Diffusion 1.4 Tagger V3, V2, Z3D and ML Models**\n",
         "%store -r\n",
         "from IPython.display import clear_output\n",
         "\n",
@@ -228,8 +228,9 @@
         "\n",
         "os.chdir(tag_dir)\n",
         "\n",
-        "MODEL = \"wd-v1-4-swinv2-tagger.v3\" # @param [\"wd-v1-4-vit-tagger.v3\",\"wd-v1-4-convnext-tagger.v3\",\"wd-v1-4-swinv2-tagger.v3\",\"wd-vit-large-tagger-v3\",\"wd-eva02-large-tagger-v3\"]\n",
-        "#@markdown Recomended treshold is between `0.4` - `0.5`. More theshold lesser tags.\n",
+        "#@markdown the **WD** **v1** and **v2** models work well in general use (anime, cartoon etc.), the **z3d** models are more focused on **furry** tags and the **ml** models are trained with **danbooru tags** (much more than the WD models) are more accurate but slower, I recommend using them with a **threshold** of `0.4` to `0.6`.\n",
+        "MODEL = \"wd-v1-4-swinv2-tagger.v3\" # @param [\"wd-v1-4-vit-tagger.v3\",\"wd-v1-4-convnext-tagger.v3\",\"wd-v1-4-swinv2-tagger.v3\",\"wd-vit-large-tagger-v3\",\"wd-eva02-large-tagger-v3\",\"wd-v1-4-moat-tagger.v2\",\"wd14-vit.v2\",\"wd14-convnext.v2\",\"z3d-e621-convnext-toynya\",\"z3d-e621-convnext-silveroxides\",\"mld-caformer.dec-5-97527\",\"mld-tresnetd.6-30000\"]\n",
+        "#@markdown More theshold lesser tags.\n",
         "threshold = 0.3 #@param {type:\"number\", min:0, max:1, step:0.05}\n",
         "#@markdown `undesire_tag` remove caption that you don't want it from the image(s). eg: `black shirt, vtuber` separated by comma.\n",
         "undesire_caption = \"bangs, breasts, multicolored hair, two-tone hair, gradient hair, virtual youtuber, parody, style parody, official alternate costume, official alternate hairstyle, official alternate hair length, alternate costume, alternate hairstyle, alternate hair length, alternate hair color, watermark, text, bubble text, signature, artist name\" # @param {type:\"string\"}\n",
@@ -277,12 +278,13 @@
         "\n",
         "os.chdir(tag_dir)\n",
         "!{final_args}\n",
-        "clear_output()\n",
+        "#clear_output()\n",
         "print(\"\\033[96mDONE ✅\\033[0m\")"
       ],
       "metadata": {
         "cellView": "form",
-        "id": "mNFLYbvT1Kfk"
+        "id": "mNFLYbvT1Kfk",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": []
