Add cell colab keep alive

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -66,7 +66,7 @@
         "from IPython.display import clear_output\n",
         "\n",
         "\n",
-        "#auto off by ZeroProtecPlus https://github.com/ZeroProtecPlus\n",
+        "#auto off\n",
         "#@markdown ### 💤 Auto Off\n",
         "\n",
         "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
@@ -95,11 +95,6 @@
         "  continue_from_lora = \"\"\n",
         "if \"override_config_file\" not in globals():\n",
         "  override_config_file = None\n",
-        "\n",
-        "#try:\n",
-        "#  LOWRAM = int(next(line.split()[1] for line in open('/proc/meminfo') if \"MemTotal\" in line)) / (1024**2) < 15\n",
-        "#except:\n",
-        "#  LOWRAM = False\n",
         "\n",
         "LOWRAM = True\n",
         "LOAD_TRUNCATED_IMAGES = True\n",
@@ -198,7 +193,6 @@
         "else:\n",
         "  vae_url = \"https://huggingface.co/stabilityai/sdxl-vae/resolve/main/sdxl_vae.safetensors\"\n",
         "  vae_file = \"/content/sdxl_vae.safetensors\"\n",
-        "\n",
         "\n",
         "#@markdown ### ▶️ Processing\n",
         "#@markdown Por defecto la resolución para personajes es 1024. otras resoluciones que puedes usar son 896 (recomendado para personajes o 1024) y 768 (recomendado para estilos, puedes usar más repeticiones con esta resolución).\n",
@@ -349,10 +343,8 @@
         "min_bucket_reso = 256\n",
         "max_bucket_reso = 4096\n",
         "\n",
-        "\n",
         "#@markdown ### ▶️ Ready\n",
         "#@markdown Ahora puedes ejecutar esta celda para entrenar tu Lora. ¡Buena suerte! <p>\n",
-        "\n",
         "\n",
         "# 👩‍💻 Cool code goes here\n",
         "\n",
@@ -391,7 +383,6 @@
         "  print('\\033[93mInstalando dependencias, esto puede tardar hasta ¡¡6 minutos!!\\033[0m')\n",
         "  os.chdir(trainer_dir)\n",
         "  !./colab_install.sh > /dev/null 2> errores.log\n",
-        "\n",
         "\n",
         "  # fix logging\n",
         "  !{venv_pip} uninstall -y rich\n",
@@ -814,7 +805,6 @@
         "                       \"### Habrá varios archivos, debe probar la última versión (el archivo con el número más grande junto a él)\"))\n",
         "\n",
         "main()\n",
-        "\n",
         "#auto off\n",
         "if auto_off:\n",
         "    print(\"\\033[96mAuto Off encendido, el entorno se desconectara en 30 segundos\\033[0m\")\n",
@@ -822,9 +812,7 @@
         "    time.sleep(30)\n",
         "    runtime.unassign()\n",
         "else:\n",
-        "    print(\"\\033[96mAuto off está desactivado, el entorno no se desconectará\\033[0m\")\n",
-        "\n",
-        "\n"
+        "    print(\"\\033[96mAuto off está desactivado, el entorno no se desconectará\\033[0m\")\n"
       ]
     },
     {
@@ -918,6 +906,23 @@
       "metadata": {
         "id": "zci9GW_i831B"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown ## Colab Activo en el celular 📳\n",
+        "#@markdown Ejecuta esta celda para mantener viva la pestaña en el celular (antes de ejecutar la celda de inicio) <p>\n",
+        "#@markdown puedes convinarlo con esta [extensión](https://chromewebstore.google.com/detail/google-colab-keep-alive/bokldcdphgknojlbfhpbbgkggjfhhaek) en tu celular o pc (en celular necesitas un navegador con soporte a extensiones, `firefox` no funcionara)\n",
+        "%%html\n",
+        "<b>Pulsa play en el reproductor de música para mantener viva la pestaña antes de ejecutar la celda de inicio (sólo utiliza 13 MB de datos).</b><br/>\n",
+        "<audio src=\"https://raw.githubusercontent.com/KoboldAI/KoboldAI-Client/main/colab/silence.m4a\" controls>"
+      ],
+      "metadata": {
+        "id": "ZIL7itnNaw5V",
+        "cellView": "form"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
