add cell colab keep alive

--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -802,6 +802,23 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#@markdown ## Colab Activo en el celular 📳\n",
+        "#@markdown Ejecuta esta celda para mantener viva la pestaña en el celular (antes de ejecutar la celda de inicio) <p>\n",
+        "#@markdown puedes convinarlo con esta [extensión](https://chromewebstore.google.com/detail/google-colab-keep-alive/bokldcdphgknojlbfhpbbgkggjfhhaek) en tu celular o pc (en celular necesitas un navegador con soporte a extensiones, `firefox` no funcionara)\n",
+        "%%html\n",
+        "<b>Pulsa play en el reproductor de música para mantener viva la pestaña antes de ejecutar la celda de inicio (sólo utiliza 13 MB de datos).</b><br/>\n",
+        "<audio src=\"https://raw.githubusercontent.com/KoboldAI/KoboldAI-Client/main/colab/silence.m4a\" controls>"
+      ],
+      "metadata": {
+        "id": "ZIL7itnNaw5V",
+        "cellView": "form"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "cellView": "form",
