--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -339,11 +339,12 @@
         "\n",
         "  !apt -y update -qq\n",
         "  !apt -y install aria2 -qq\n",
-        "  !pip install accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 -q \\\n",
-        "    bitsandbytes==0.40.0.post4 flax==0.7.5 opencv-python jax==0.4.23 jaxlib==0.4.23 -q \\\n",
+        "  !pip install transformers==4.30.2 diffusers==0.18.2 -q \\\n",
+        "    bitsandbytes==0.45.1 flax==0.7.5 jax==0.4.23 jaxlib==0.4.23 -q \\\n",
         "    pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 -q \\\n",
         "    safetensors pygments huggingface-hub==0.22.0 wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 -q \\\n",
-        "    dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2 -q\n",
+        "    dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2 -q \\\n",
+        "    torch==2.5.1+cu121 --extra-index https://download.pytorch.org/whl/cu121 -q\n",
         "  !pip install -e .\n",
         "  if cross_attention == \"xformers\":\n",
         "    !pip install -q xformers\n",
