Add LoKR to training

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -243,8 +243,8 @@
         "multinoise = False #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown ### ▶️ Structure\n",
-        "#@markdown LoRA es del tipo clásico y bueno para una variedad de propósitos. LoCon es bueno con los estilos artísticos ya que tiene más capas para aprender más aspectos del conjunto de datos.\n",
-        "lora_type = \"LoRA\" #@param [\"LoRA\", \"LoCon\"]\n",
+        "#@markdown LoRA es del tipo clásico y bueno para una variedad de propósitos. LoCon y LoKR es bueno con los estilos artísticos (también funciona con personajes) ya que tiene más capas para aprender más aspectos del conjunto de datos.\n",
+        "lora_type = \"LoRA\" # @param [\"LoRA\",\"LoCon\",\"LoKR\"]\n",
         "\n",
         "#@markdown A continuación se muestran algunos valores XL recomendados para las siguientes configuraciones:\n",
         "\n",
@@ -257,7 +257,7 @@
         "#@markdown Más dim significa un Lora más grande, puede contener más información, pero más no siempre es mejor.\n",
         "network_dim = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "network_alpha = 16 #@param {type:\"number\", min:1, max:32, step:1}\n",
-        "#@markdown Los siguientes dos valores solo se aplican a las capas adicionales de LoCon.\n",
+        "#@markdown Los siguientes dos valores solo se aplican a las capas adicionales de LoCon y LoKR.\n",
         "conv_dim = 16 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "conv_alpha = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "\n",
@@ -265,6 +265,9 @@
         "network_args = None\n",
         "if lora_type.lower() == \"locon\":\n",
         "  network_args = [f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
+        "network_module = \"lycoris.kohya\"\n",
+        "networks_args = None\n",
+        "network_args = [f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
         "\n",
         "#@markdown ### ▶️ Training\n",
         "#@markdown Ajuste estos parámetros según la configuración de su colab.\n",
