experimental ram patch

--- a/Fix_Lora_Trainer_XL_EX.ipynb
+++ b/Fix_Lora_Trainer_XL_EX.ipynb
@@ -376,7 +376,12 @@
         "dataset_config_file = os.path.join(config_folder, \"dataset_config.toml\")\n",
         "\n",
         "def install_trainer():\n",
-        "  !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
+        "#  !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
+        "# parche para ram\n",
+        "if 'installed' not in globals():\n",
+        "    !sudo apt-get install -y libjemalloc-dev -q\n",
+        "    !gdown --fuzzy https://drive.google.com/file/d/1NFABbKFE19HpK1mqUJpFjFefY_oA9phm/view?usp=sharing -O /content/libjemalloc.so.2\n",
+        "    installed = True  # Marcar como instalado\n",
         "\n",
         "  !apt -y update -qq\n",
         "  !apt install -y python3.10-venv aria2 -qq\n",
@@ -406,7 +411,8 @@
         "\n",
         "  os.chdir(root_dir)\n",
         "\n",
-        "  os.environ[\"LD_PRELOAD\"] = \"/content/libtcmalloc_minimal.so.4\"\n",
+        "  os.environ[\"LD_PRELOAD\"] = \"/content/libjemalloc.so.2\"\n",
+        "  !echo $LD_PRELOAD\n",
         "  os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
         "  os.environ[\"BITSANDBYTES_NOWELCOME\"] = \"1\"\n",
         "  os.environ[\"SAFETENSORS_FAST_GPU\"] = \"1\"\n",
